Allow transparency to work when using images as backgrounds.

Previously when using an image as the background, the opacity was
ignored.  This patch corrects that.

Many thanks for patch to Wolfgang Brehm  wolfgang brehm gmail com

BUG: 312843
FIXED-IN: 2.13
(cherry picked from commit 09ca63dbb602a2c5d4d58fd6c9ee9206668cf1cd)