src/ColorScheme.h
@@ -52,7 +52,7 @@ public:
     void load();
 
     /** Returns true if wallpaper available and drawn */
-    bool draw(QPainter& painter, const QRect& rect);
+    bool draw(QPainter& painter, const QRect& rect, qreal opacity=1.0);
 
     bool isNull() const;
 
